Introduce panel registry for layout

--- a/docs/ai_log/2025-10-05.md
+++ b/docs/ai_log/2025-10-05.md
@@ -23,3 +23,70 @@
 ## Docs Consulted
 - Spectra App v1.2+ – Handoff Protocol & Task Blueprint. 【F:docs/ai_handoff/Spectra App v1.2+ – Handoff Protocol & Task Blueprint.txt†L1-L35】
 - NIST Atomic Spectra Database help. 【F:docs/mirrored/nist_asd_help/help.meta.json†L1-L6】
+
+## Tasking — v1.2.1g
+- Compile a SpecViz/Jdaviz capability survey and translate it into an adoption blueprint for Spectra App.
+- Update v1.2+ continuity collateral (brains, patch notes, patch log, version) to document the research handoff.
+
+## Actions & Decisions
+- Reviewed Jdaviz quickstart, Specviz import/display/plugin/export guides, Cubeviz/Specviz2D docs, and developer API references to catalogue ingestion pathways, viewer ergonomics, plugin coverage, export flows, and provenance expectations. 【F:docs/research/specviz_adaptation.md†L5-L68】
+- Captured the findings in a gap matrix, phased roadmap, and research backlog to anchor Spectra App planning around SpecViz parity. 【F:docs/research/specviz_adaptation.md†L70-L144】
+- Logged the blueprint in `docs/atlas/brains.md`, published patch notes `v1.2.1g`, bumped `app/version.json`, and extended `PATCHLOG.txt` for traceability. 【F:docs/atlas/brains.md†L205-L210】【F:docs/patch_notes/v1.2.1g.md†L1-L20】【F:app/version.json†L1-L5】【F:PATCHLOG.txt†L34-L38】
+- Cross-referenced JWST archive guidance noting Jdaviz availability within the MAST portal to align our roadmap with community expectations. 【F:docs/mirrored/jwst_docs/accessing-jwst-data/mast-web-access.md†L60-L86】【F:docs/mirrored/jwst_docs/accessing-jwst-data/mast-web-access.meta.json†L1-L6】
+
+## Verification
+- Not applicable (documentation-only research update).
+
+## Outstanding Follow-ups
+- Size the engineering effort for adopting `specutils` data models within our ingest pipeline.
+- Prototype a pluggable panel/tray framework informed by the roadmap.
+- Evaluate Glue integration depth and session persistence strategies noted in the research backlog.
+
+## Docs Consulted
+- Jdaviz quickstart, Specviz, Cubeviz, Specviz2D, Mosviz, export, and API documentation. 【F:docs/research/specviz_adaptation.md†L5-L144】
+- JWST MAST portal guidance referencing Jdaviz tooling. 【F:docs/mirrored/jwst_docs/accessing-jwst-data/mast-web-access.md†L60-L86】【F:docs/mirrored/jwst_docs/accessing-jwst-data/mast-web-access.meta.json†L1-L6】
+
+## Tasking — v1.2.1h
+- Review newly published Jdaviz GitHub developer docs and reconcile them against Spectra App’s current architecture.
+- Produce a code-grounded alignment plan clarifying where to introduce registries, reusable components, helper APIs, and specutils-backed plugins.
+- Refresh continuity collateral (brains, patch notes, patch log, version) to capture the follow-up research milestone.
+
+## Actions & Decisions
+- Downloaded the Jdaviz developer infrastructure, plugin component, UI, and selection references from GitHub to extend the external research baseline. 【F:docs/research/specviz_code_alignment.md†L1-L42】
+- Audited Spectra App’s overlay model, ingest queue, analysis helpers, export manifest, and target gating to document the current implementation footprint. 【F:docs/research/specviz_code_alignment.md†L44-L89】
+- Captured alignment gaps and next steps bridging Specviz patterns with Spectra App’s Streamlit architecture, informing future engineering spikes. 【F:docs/research/specviz_code_alignment.md†L91-L128】
+- Logged the audit in brains, patch notes `v1.2.1h`, version metadata, and patch log to satisfy the v1.2+ continuity contract. 【F:docs/atlas/brains.md†L86-L94】【F:docs/patch_notes/v1.2.1h.md†L1-L11】【F:app/version.json†L1-L5】【F:PATCHLOG.txt†L34-L35】
+
+## Verification
+- Not applicable (documentation-only update).
+
+## Outstanding Follow-ups
+- Prototype the `panel_registry` abstraction and notebook helper API outlined in the alignment plan.
+- Investigate capturing Plotly ROI selections as `specutils.SpectralRegion` exports for provenance parity.
+- Evaluate specutils-backed fitting/smoothing plugins to replace bespoke NumPy pipelines.
+
+## Docs Consulted
+- Jdaviz developer documentation on infrastructure, plugin components, UI framework, and selections. 【F:docs/research/specviz_code_alignment.md†L1-L42】
+- Spectra App v1.2+ – Handoff Protocol & Task Blueprint. 【F:docs/ai_handoff/Spectra App v1.2+ – Handoff Protocol & Task Blueprint.txt†L1-L35】
+
+## Tasking — v1.2.1i
+- Prototype the registry-driven layout manager identified in the SpecViz alignment plan.
+- Refactor the main Streamlit entry point to consume registered panels instead of hard-coded layout wiring.
+- Refresh continuity collateral (brains, patch notes, version metadata, patch log, AI log) for the new release.
+
+## Actions & Decisions
+- Re-read the immediate next steps from the SpecViz alignment review to confirm the registry abstraction as the highest priority follow-up. 【F:docs/research/specviz_code_alignment.md†L31-L44】
+- Authored `app/ui/panel_registry.py` to store sidebar and workspace panel specs with identifiers, labels, render callbacks, and ordering. 【F:app/ui/panel_registry.py†L1-L112】
+- Wrapped existing overlay, differential, library, docs, and session-control panels in registry adapters and updated `render()` to assemble sidebar containers and tabs from registered specs. 【F:app/ui/main.py†L3414-L3543】
+- Logged the architectural change across brains, patch notes `v1.2.1i`, version metadata, and the patch log per the v1.2+ contract. 【F:docs/atlas/brains.md†L9-L11】【F:docs/patch_notes/v1.2.1i.md†L1-L11】【F:app/version.json†L1-L5】【F:PATCHLOG.txt†L34-L36】
+
+## Verification
+- `python -m compileall app/ui/panel_registry.py app/ui/main.py`
+
+## Outstanding Follow-ups
+- Design the `SpectraWorkspace` helper API outlined in the alignment roadmap to expose ingest/export flows outside Streamlit. 【F:docs/research/specviz_code_alignment.md†L40-L44】
+- Capture viewport selections as persistent regions and pipe them into export manifests for provenance parity.
+- Evaluate specutils-backed fitting plugins to replace bespoke NumPy differential helpers.
+
+## Docs Consulted
+- SpecViz alignment review (registry and helper roadmap). 【F:docs/research/specviz_code_alignment.md†L31-L44】
