Auto-select overlay wavelength units

--- a/docs/ai_log/2025-10-27.md
+++ b/docs/ai_log/2025-10-27.md
@@ -13,3 +13,46 @@
 
 ## Docs Consulted
 - None (code inspection only).
+
+## Tasking — Enable JCAMP-DX imports
+- Allow NIST infrared spectra exported as JCAMP-DX files to import as overlays without plotting the bundled uncertainty traces.
+
+## Actions & Decisions
+- Built a dedicated `parse_jcamp` helper that tokenises JCAMP XYDATA sections, converts reported wavelength units to nanometres, skips uncertainty-labelled sections, and preserves provenance metadata for caching/downsampling. 【F:app/server/ingest_jcamp.py†L20-L383】
+- Extended local upload detection to recognise JCAMP extensions or headers and routed those payloads through the new parser while leaving existing FITS/ASCII flows unchanged. 【F:app/utils/local_ingest.py†L11-L75】【F:app/utils/local_ingest.py†L305-L404】
+- Added a regression covering a dual-section JCAMP sample to confirm the spectrum imports, uncertainty data is ignored, and header-only detection still selects the JCAMP path. 【F:tests/server/test_local_ingest.py†L360-L403】
+
+## Verification
+- `pytest tests/server/test_local_ingest.py::test_ingest_local_jcamp_xydata_skips_uncertainty -q` 【9198e9†L1-L2】
+
+## Docs Consulted
+- None (sample JCAMP downloaded from NIST WebBook for inspection).
+
+## Tasking — Accept JCAMP uploads in the UI
+- Ensure the Streamlit uploader allows `.jdx` spectra now that JCAMP ingestion exists, and document the capability.
+
+## Actions & Decisions
+- Added a `SUPPORTED_LOCAL_UPLOAD_EXTENSIONS` union so the uploader and ingest path share the same suffix list, covering JCAMP in addition to ASCII and FITS types. 【F:app/utils/local_ingest.py†L18-L45】
+- Updated the uploader widget copy to surface JCAMP support and avoid the Streamlit type filter rejecting `.jdx` payloads. 【F:app/ui/main.py†L55-L86】【F:app/ui/main.py†L2368-L2383】
+- Documented the supported JCAMP uploads in the quick start guide and captured regression coverage for the union constant. 【F:docs/app/user_guide.md†L18-L24】【F:tests/utils/test_local_ingest_constants.py†L1-L18】
+
+## Verification
+- `pytest tests/utils/test_local_ingest_constants.py -q` 【1c7241†L1-L2】
+- `pytest tests/server/test_local_ingest.py::test_ingest_local_jcamp_xydata_skips_uncertainty -q` 【52ce04†L1-L2】
+
+## Docs Consulted
+- None (code inspection of existing uploader logic).
+
+## Tasking — Default wavelength units to uploaded spectra
+- Make the overlay display controls respect the first trace's reported wavelength unit so JCAMP wavenumber uploads land on matching axes.
+
+## Actions & Decisions
+- Added display-unit normalisers that collapse metadata/provenance hints (cm⁻¹, µm, Å) into UI tokens the select box understands before seeding the session state. 【F:app/ui/main.py†L1010-L1052】
+- Set the first overlay to stamp its preferred unit when no manual override exists and reset overrides when overlays are cleared, keeping conversions idempotent. 【F:app/ui/main.py†L1199-L1242】【F:app/ui/main.py†L1448-L1476】
+- Documented the behaviour in the quick-start guide and recorded regression coverage for the helper logic. 【F:docs/app/user_guide.md†L20-L25】【F:tests/ui/test_display_unit_preferences.py†L1-L45】
+
+## Verification
+- `pytest tests/ui/test_display_unit_preferences.py -q`
+
+## Docs Consulted
+- None (UI code inspection).
