Fix Quant IR overlay vectoriser fallback

--- a/docs/ai_log/2025-10-27.md
+++ b/docs/ai_log/2025-10-27.md
@@ -1,5 +1,19 @@
 # AI Log — 2025-10-27
 
+## Tasking — Integrate NIST Quantitative IR catalog
+- Scrape the Quant IR species table, resolve the 0.125 cm⁻¹ JCAMP entries, and expose the spectra through the app with provenance and regression coverage.
+
+## Actions & Decisions
+- Implemented a dedicated `nist_quant_ir` fetcher that caches the catalog, extracts JCAMP links, and annotates overlays with relative uncertainty, apodization, and source URLs. 【F:app/server/fetchers/nist_quant_ir.py†L1-L220】
+- Added a preset molecule selector to the line catalog panel with cached availability hints and fallback messaging for molecules missing from the Quant IR list. 【F:app/ui/main.py†L53-L122】【F:app/ui/main.py†L1372-L1455】
+- Documented the workflow in the quick start guide and added parser regressions to lock table parsing, JCAMP extraction, and apodization preference logic. 【F:docs/app/user_guide.md†L11-L18】【F:tests/server/test_nist_quant_ir.py†L1-L64】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q`
+
+## Docs Consulted
+- None (live NIST Quant IR page inspection).
+
 ## Tasking — Restore clean v1.2.1 baseline
 - Remove merge conflict artifacts introduced during an aborted plugin refactor and realign release collateral.
 
@@ -56,3 +70,16 @@
 
 ## Docs Consulted
 - None (UI code inspection).
+
+## Tasking — Stabilize Quant IR overlay sampling
+- Ensure Quant IR overlays sampled with viewport limits build trace vectors without runtime errors.
+
+## Actions & Decisions
+- Guarded the overlay vectoriser to return cached dataframes only when available and fall back to sampled points otherwise, eliminating the `UnboundLocalError`. 【F:app/ui/main.py†L210-L241】
+- Bumped the app version and recorded release collateral for the bug fix. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1o.md†L1-L8】【F:PATCHLOG.txt†L22-L41】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【0fb255†L1-L2】
+
+## Docs Consulted
+- None (code inspection only).
