Guard Quant IR sidebar manual caption

--- a/docs/ai_log/2025-10-07.md
+++ b/docs/ai_log/2025-10-07.md
@@ -22,3 +22,34 @@
 ## Docs Consulted
 - Spectra App v1.2+ – Handoff Protocol & Task Blueprint. 【F:docs/ai_handoff/Spectra App v1.2+ – Handoff Protocol & Task Blueprint.txt†L1-L78】
 - MAST API Documentation (field catalog). 【F:docs/mirrored/mast_api.meta.json†L1-L6】
+
+## Tasking — v1.2.1r
+- Restore the Quant IR sidebar by providing a supported hook for manual WebBook species when the private helper is absent.
+- Keep manual provenance messaging intact while tolerating fetcher implementations that pre-date the helper rename.
+- Refresh release collateral and unit coverage in line with the v1.2 continuity contract.
+
+## Actions & Decisions
+- Added a public `manual_species_catalog()` export that mirrors the curated WebBook entries while keeping `_manual_species_catalog()` as a compatibility alias. 【F:app/server/fetchers/nist_quant_ir.py†L18-L135】
+- Updated the Quant IR sidebar form to call whichever helper exists and defensively swallow catalog lookup failures so the panel renders even on legacy deployments. 【F:app/ui/main.py†L1557-L1591】
+- Swapped the regression onto the public helper and rolled release metadata/notes to capture the change. 【F:tests/server/test_nist_quant_ir.py†L96-L109】【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1r.md†L1-L10】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【b20783†L1-L2】
+
+## Docs Consulted — v1.2.1r
+- _None._
+
+## Tasking — v1.2.1s
+- Resolve the Quant IR sidebar crash caused by accessing the legacy `_manual_species_catalog` attribute on deployments that never exposed it.
+- Maintain manual WebBook provenance messaging for curated molecules while tolerating older fetcher modules.
+- Roll release collateral in line with the v1.2 continuity rules.
+
+## Actions & Decisions
+- Wrapped the Quant IR manual catalog getter lookup in an AttributeError guard so the sidebar uses the public helper when the legacy alias is absent. 【F:app/ui/main.py†L1583-L1597】
+- Incremented the release metadata and documented the compatibility patch in brains and patch notes. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L1-L18】【F:docs/patch_notes/v1.2.1s.md†L1-L9】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【b20783†L1-L2】
+
+## Docs Consulted — v1.2.1s
+- _None._
