Preserve raw NIST IR samples with offline WebBook fallbacks

--- a/docs/ai_log/2025-10-07.md
+++ b/docs/ai_log/2025-10-07.md
@@ -22,3 +22,131 @@
 ## Docs Consulted
 - Spectra App v1.2+ – Handoff Protocol & Task Blueprint. 【F:docs/ai_handoff/Spectra App v1.2+ – Handoff Protocol & Task Blueprint.txt†L1-L78】
 - MAST API Documentation (field catalog). 【F:docs/mirrored/mast_api.meta.json†L1-L6】
+
+## Tasking — v1.2.1r
+- Restore the Quant IR sidebar by providing a supported hook for manual WebBook species when the private helper is absent.
+- Keep manual provenance messaging intact while tolerating fetcher implementations that pre-date the helper rename.
+- Refresh release collateral and unit coverage in line with the v1.2 continuity contract.
+
+## Actions & Decisions
+- Added a public `manual_species_catalog()` export that mirrors the curated WebBook entries while keeping `_manual_species_catalog()` as a compatibility alias. 【F:app/server/fetchers/nist_quant_ir.py†L18-L135】
+- Updated the Quant IR sidebar form to call whichever helper exists and defensively swallow catalog lookup failures so the panel renders even on legacy deployments. 【F:app/ui/main.py†L1557-L1591】
+- Swapped the regression onto the public helper and rolled release metadata/notes to capture the change. 【F:tests/server/test_nist_quant_ir.py†L96-L109】【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1r.md†L1-L10】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【b20783†L1-L2】
+
+## Docs Consulted — v1.2.1r
+- _None._
+
+## Tasking — v1.2.1s
+- Resolve the Quant IR sidebar crash caused by accessing the legacy `_manual_species_catalog` attribute on deployments that never exposed it.
+- Maintain manual WebBook provenance messaging for curated molecules while tolerating older fetcher modules.
+- Roll release collateral in line with the v1.2 continuity rules.
+
+## Actions & Decisions
+- Wrapped the Quant IR manual catalog getter lookup in an AttributeError guard so the sidebar uses the public helper when the legacy alias is absent. 【F:app/ui/main.py†L1583-L1597】
+- Incremented the release metadata and documented the compatibility patch in brains and patch notes. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L1-L18】【F:docs/patch_notes/v1.2.1s.md†L1-L9】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【b20783†L1-L2】
+
+## Docs Consulted — v1.2.1s
+- _None._
+
+## Tasking — v1.2.1t
+- Reorient Quant IR absorption spectra so catalog molecules plot as downward features like the manual WebBook presets.
+- Preserve manual transmission traces while annotating absorption payload metadata/provenance for downstream consumers.
+- Refresh versioning collateral so the app header and docs advertise the new patch.
+
+## Actions & Decisions
+- Introduced a flux orientation helper that flips Quant IR catalog spectra, updates downsample tiers, and stamps absorption axis metadata/provenance while leaving manual transmission payloads intact. 【F:app/server/fetchers/nist_quant_ir.py†L310-L371】【F:app/server/fetchers/nist_quant_ir.py†L373-L452】
+- Expanded unit coverage to assert non-manual payloads invert while manual spectra remain untouched, then rolled version metadata, patch notes, and patch log for v1.2.1t. 【F:tests/server/test_nist_quant_ir.py†L110-L151】【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1t.md†L1-L9】【F:PATCHLOG.txt†L40-L42】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【25b149†L1-L2】
+
+## Docs Consulted — v1.2.1t
+- _None._
+
+## Tasking — v1.2.1u
+- Convert Quant IR absorbance payloads into transmission curves so catalog overlays mirror the manual WebBook baselines.
+- Align Quant IR metadata/provenance units with the new transmission orientation while preserving manual WebBook spectra.
+- Update release collateral and regression coverage per the v1.2 continuity contract.
+
+## Actions & Decisions
+- Attempted to launch the local docs search server but `faiss` is unavailable in the runner, so deferred to existing docs context. 【a6618d†L1-L6】
+- Replaced the Quant IR flux inversion with a Beer–Lambert transmission conversion (T = 10^(-absorbance)), clamped negative absorbance noise, propagated the new units into downsample tiers, and refreshed axis/flux metadata. 【F:app/server/fetchers/nist_quant_ir.py†L303-L385】
+- Extended the Quant IR orientation tests to assert the transmission conversion, manual WebBook preservation, and provenance metadata while updating version metadata, patch notes, and the patch log for v1.2.1u. 【F:tests/server/test_nist_quant_ir.py†L110-L170】【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1u.md†L1-L11】【F:PATCHLOG.txt†L42-L43】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【25b149†L1-L2】
+
+## Docs Consulted — v1.2.1u
+- _None._
+
+## Tasking — v1.2.1v
+- Align Quant IR overlay wavenumber plots with laboratory convention so high wavenumbers appear on the left.
+- Ensure explicit viewport ranges respect the reversed wavenumber axis without disturbing other unit views.
+- Refresh release collateral and regression coverage to document the UI orientation fix.
+
+## Actions & Decisions
+- Reversed the Plotly x-axis whenever the workspace display units resolve to `cm⁻¹`, carrying the reversal through explicit viewport ranges so manual and catalog traces both mirror standard IR orientation. 【F:app/ui/main.py†L2296-L2326】
+- Added a regression that converts a synthetic spectrum to wavenumber units and asserts the axis reversal plus descending samples, preventing future orientation regressions. 【F:tests/ui/test_overlay_mixed_axes.py†L22-L46】
+- Bumped the release metadata, patch log, and notes to v1.2.1v while chronicling the change in the brains index. 【F:app/version.json†L1-L5】【F:PATCHLOG.txt†L44-L48】【F:docs/patch_notes/v1.2.1v.md†L1-L9】【F:docs/atlas/brains.md†L173-L180】
+
+## Verification
+- `pytest tests/ui/test_overlay_mixed_axes.py -q` 【62a075†L1-L2】
+
+## Docs Consulted — v1.2.1v
+- _None._
+
+## Tasking — v1.2.1w
+- Recalibrate Quant IR overlays so the app plots percent transmittance with trustworthy unit metadata.
+- Surface explicit flux-axis labelling in the workspace so the viewer communicates transmittance units.
+- Refresh release collateral and regression coverage for the new calibration.
+
+## Actions & Decisions
+- Replaced the Quant IR flux post-processing with a Beer–Lambert percent conversion that records default mixing ratio and path-length calibration while propagating percent scaling through downsample tiers, metadata, and provenance. 【F:app/server/fetchers/nist_quant_ir.py†L317-L453】
+- Extended the Quant IR regression suite to assert percent outputs, calibration metadata, and manual WebBook preservation, ensuring the new helper remains covered. 【F:tests/server/test_nist_quant_ir.py†L137-L203】
+- Derived workspace flux-axis titles from overlay metadata and added a regression that expects the transmittance label, aligning the UI with the new units. 【F:app/ui/main.py†L2082-L2358】【F:tests/ui/test_overlay_mixed_axes.py†L12-L153】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【078d7a†L1-L2】
+- `pytest tests/ui/test_overlay_mixed_axes.py -q` 【f5d3a8†L1-L2】
+
+## Docs Consulted — v1.2.1w
+- Astropy units primer for handling quantities and conversions. 【F:docs/mirrored/astropy/units.md†L1-L47】【F:docs/mirrored/astropy/units.meta.json†L1-L6】
+
+## Tasking — v1.2.1x
+- Align the Quant IR manual catalog with the provided NIST WebBook JCAMP references and refresh the preset list.
+- Calibrate percent transmittance using sample pressure metadata while surfacing cm⁻¹ axis hints across metadata and provenance.
+- Extend regression coverage to reflect the new catalog entries and pressure-aware conversion.
+
+## Actions & Decisions
+- Rebuilt the manual Quant IR catalog with the supplied WebBook JCAMP links and aliases so the sidebar presets resolve to those spectra even when the public catalog omits them. 【F:app/server/fetchers/nist_quant_ir.py†L603-L781】
+- Introduced pressure-aware Beer–Lambert conversions that emit percent transmittance, clamp flux tiers, and annotate cm⁻¹ axis metadata alongside provenance unit hints. 【F:app/server/fetchers/nist_quant_ir.py†L259-L558】
+- Updated the Quant IR preset roster and unit tests to match the new catalog tokens and pressure-calibrated expectations. 【F:app/ui/main.py†L70-L95】【F:tests/server/test_nist_quant_ir.py†L97-L215】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【a39997†L1-L2】
+- `pytest tests/ui/test_overlay_mixed_axes.py -q` 【cdd698†L1-L2】
+
+## Docs Consulted — v1.2.1x
+- Astropy units primer for handling quantities and conversions. 【F:docs/mirrored/astropy/units.md†L1-L47】【F:docs/mirrored/astropy/units.meta.json†L1-L6】
+
+## Tasking — v1.2.1y
+- Remove the ad-hoc percent transmittance conversion so JCAMP flux values remain untouched.
+- Ensure the Quant IR UI still exposes manual WebBook spectra (Water/CO₂/CH₄) even when the live catalog fails to load.
+- Update regression coverage and collateral to reflect the raw WebBook handling and offline fallback.
+
+## Actions & Decisions
+- Stripped the Beer–Lambert helpers from the Quant IR fetcher, keeping the JCAMP flux samples intact while still tagging cm⁻¹ metadata in `_finalise_payload`. 【F:app/server/fetchers/nist_quant_ir.py†L140-L205】【F:app/server/fetchers/nist_quant_ir.py†L519-L662】
+- Added guarded catalog loading so manual WebBook entries backfill the selector whenever the Quant IR table download fails. 【F:app/server/fetchers/nist_quant_ir.py†L236-L305】【F:app/server/fetchers/nist_quant_ir.py†L308-L337】
+- Replaced the percent-conversion regression with a `_finalise_payload` test that asserts flux arrays are unchanged and cm⁻¹ hints are present. 【F:tests/server/test_nist_quant_ir.py†L1-L120】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【25b149†L1-L2】
+
+## Docs Consulted — v1.2.1y
+- Reviewed NIST IR dimensional spectroscopy technical notes to confirm native JCAMP transmittance semantics. 【F:docs/mirrored/nist_dimspec/technical-details.md†L1-L120】【F:docs/mirrored/nist_dimspec/technical-details.meta.json†L1-L6】
